Edited Profile page display bug.
Confirmed sticky navbar works and added background color to it. NEEDS FIXING: The profile and groups page seems to be scaled up, causing the components to overlap.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,12 +10,13 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    min-height: 9vh;
+    min-height: 8vh;
     position: fixed;
     width: 100%;
     top: 0px;
     color: #6495ed;
     font-family: 'Nunito Sans', sans-serif;
+    background-color: white;
 }
 
 .logo{
@@ -32,6 +33,7 @@
 
 .nav-links{
     display: flex;
+    padding-top: 1vh;
     justify-content: space-around;
     width: 35%;
 }
@@ -44,7 +46,7 @@
     color:#6495ed;
     text-decoration: none;
     letter-spacing: 3px;
-    font-weight: 700;
+    font-weight: 900;
     text-transform: lowercase;
 }
 
